--- a/config.yml
+++ b/config.yml
@@ -1,2 +1,5 @@
 name: My Site
 theme: minima
+              - name: Build Jekyll for GitHub Pages
+                uses: actions/jekyll-build-pages@v1.0.12
+            
